# Mediloctae

./: CMakeLists.txt  index.html  requirements.txt
include/: MinHeap.h  Trie.h
python_api/: README.md  app.py  config.py  medilocate.cp38-win_amd64.pyd  models.py  requirements.txt  routes.py
python_api/Debug/: expiry_heap.cp38-win_amd64.pyd  medilocate.cp38-win_amd64.pyd
src/: App.css  App.js  MinHeap.cpp  Trie.cpp  index.js  main.cpp  minheap_binding.cpp  trie_binding.cpp
src/components/: AdminPage.js  AdminPage.jsx  Dashboard.jsx  LoginSignupPage.jsx  SearchPage.js
